# twlawexam-mcp

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
docs/: phone-setup.md
docs/superpowers/plans/: 2026-06-10-twexam-mcp-foundation.md  2026-06-10-twexam-mcp-ingestion.md
docs/superpowers/specs/: 2026-06-10-phase0-spike-findings.md  2026-06-10-twexam-mcp-design.md
scripts/: build_release.py  migrate_progress_db.py  serve_phone.ps1
tests/: conftest.py  test_answer_key.py  test_audit.py  test_config.py  test_db.py  test_db_queries.py  test_downloader.py  test_essay_exam.py  test_ingest_refs.py  test_model_answer_gen.py  test_models.py  test_pdf_parser_essay.py  test_pdf_parser_mcq.py  test_pipeline.py  test_retag_statutes.py  test_review.py  test_seed.py  test_server_wiring.py  test_statute_tagger.py  test_tools_answers.py  test_tools_catalog.py  test_tools_practice.py  test_tools_search.py  test_tools_statute.py  test_updater.py
twexam_mcp/: config.py  http_app.py  server.py  updater.py
twexam_mcp/cache/: db.py
twexam_mcp/data/: essay_answers.json  seed.json  statute_map.json  topic_map.json  topic_notes.json
twexam_mcp/ingest/: answer_key.py  audit.py  downloader.py  model_answer_gen.py  pdf_parser.py  pipeline.py  refs.py  run.py  statute_tagger.py
twexam_mcp/models/: question.py
twexam_mcp/tools/: answers.py  exam_catalog.py  exam_map.py  practice.py  question_search.py  review.py  statute_xref.py
