[project]
name = "twexam-mcp"
version = "0.5.0"
description = "Taiwan legal-exam question bank MCP server"
requires-python = ">=3.11"
dependencies = ["mcp>=1.2.0"]
license = {text = "MIT"}

[project.scripts]
twexam-mcp = "twexam_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ingest = ["playwright>=1.40", "pymupdf>=1.24", "httpx>=0.27"]
llm = ["google-genai>=1.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["twexam_mcp*"]

# Bundle the prebuilt question bank so the wheel is self-contained: installing
# it gives a working MCP with the full 1940-question DB, no ingestion pipeline
# (Playwright / network) required.  The PDF cache (twexam_mcp/data/pdfs/) is
# deliberately NOT shipped — it is large, rebuildable, and unused at runtime.
[tool.setuptools.package-data]
# questions.db = prebuilt bank; *.json = seed + topic_map (考點 classification
# source, used by db.apply_topic_map after a rebuild).
"twexam_mcp.data" = ["questions.db", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
